--- a/my_reactapp_musicplayer/package.json
+++ b/my_reactapp_musicplayer/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "lucide-react": "^0.475.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-h5-audio-player": "^3.10.0-rc.1",
     "react-router-dom": "^7.1.5"
   },
   "devDependencies": {
